fix scroll on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -25,11 +25,11 @@
 }
 html {
   line-height: 1;
+  overflow: hidden;
 }
 
 body {
-  min-height: 100vh;
-  min-width: 100vw;
+  height: 100vh;
   background-image: url("./assets/images/background-hc-mobile.png");
   background-size: cover;
   background-position: center;
@@ -146,7 +146,7 @@ main {
   margin-bottom: 00.5rem;
 }
 .hero-corporation-logo {
-  max-width: 500px;
+  max-width: 100vw;
   height: auto;
 }
 .heroAttack {
